tests/parser/bad/exps/exp_t-let-id-colon-tid-eq-with.scilexp
let a : (Bool) = [True] in a
